--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,16 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "googleapis": "^128.0.0",
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.6",
+    "nodemon": "^3.0.1",
+    "unique-string-generator": "^1.1.1"
   }
 }
