--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
     "googleapis": "^128.0.0",
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
@@ -26,6 +27,8 @@
     "mongoose": "^7.5.3",
     "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "unique-string-generator": "^1.1.1"
   }
 }
