--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_ENV=development && nodemon index.js",
+    "start": "set NODE_ENV=development &&  nodemon index.js ",
     "test": "set NODE_ENV=test && nodemon index.js"
   },
   "keywords": [],
@@ -25,6 +25,8 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
+    "node-notifier": "^10.0.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
