--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.3",
     "googleapis": "^128.0.0",
     "helmet": "^7.0.0",
+    "http": "^0.0.1-security",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
@@ -31,6 +32,7 @@
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
+    "socket.io": "^4.7.2",
     "unique-string-generator": "^1.1.1"
   }
 }
