--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -7,3 +7,11 @@ CLIENT_ID =
 CLIENT_SECRET = 
 REFRESH_TOKEN = 
 REDIRECT_URI = 
+
+
+GOOGLE_CLIENT_ID = 
+GOOGLE_CLIENT_SECRET =
+
+
+GOOGLE_CONTACT_CLIENT_ID = 
+GOOGLE_CONTACT_CLIENT_SECRET = 
