feat: add google sync feature for google calendar and contact feature

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -15,6 +15,9 @@ GOOGLE_CLIENT_SECRET =
 
 GOOGLE_CONTACT_CLIENT_ID = 
 GOOGLE_CONTACT_CLIENT_SECRET = 
+GOOGLE_REDIRECT_URI =
+
+CALENDAR_API_KEY = 
 
 CLOUD_NAME = 
 API_KEY = 
