--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.16",
     "@mui/x-date-pickers": "^6.17.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "moment": "^2.29.4",
     "react": "^18.2.0",
