--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-big-calendar": "^1.8.4",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-image-crop": "^10.1.8",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
