fix: add eslint for code clean up

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "set NODE_ENV=development &&  nodemon index.js ",
-    "test": "set NODE_ENV=test && nodemon index.js"
+    "test": "set NODE_ENV=test && nodemon index.js",
+    "lint":"npx eslint ."
   },
   "keywords": [],
   "author": "",
@@ -37,5 +38,8 @@
     "passport-google-oauth2": "^0.2.0",
     "socket.io": "^4.7.2",
     "unique-string-generator": "^1.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0"
   }
 }
