--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "set NODE_ENV=development &&  nodemon index.js ",
-    "test": "set NODE_ENV=test && nodemon index.js",
-    "lint":"npx eslint ."
+    "test": "set NODE_ENV=test &&  jest --testTimeout=1000",
+    "lint": "npx eslint ."
   },
   "keywords": [],
   "author": "",
@@ -40,6 +40,9 @@
     "unique-string-generator": "^1.1.1"
   },
   "devDependencies": {
-    "eslint": "^8.55.0"
+    "@faker-js/faker": "^8.3.1",
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
