--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,3 +1,15 @@
 {
-    "rewrites": [{ "source": "./(.*)", "destination": "/api" }]
+    "version": 2,
+    "builds": [
+        {
+            "src": "/backend/*.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/backend/(.*)",
+            "dest": "/"
+        }
+    ]
 }
