--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,5 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "/backend/*.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/backend/(.*)",
-            "dest": "/"
-        }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
     ]
 }
