--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-error-boundary": "^4.0.11",
     "react-image-crop": "^10.1.8",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
