--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
+    "@rollup/plugin-image": "^3.0.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
