--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,14 @@
 {
   "name": "frontend",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -34,6 +35,7 @@
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "serve": "^14.2.1",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
@@ -49,6 +51,5 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
-  },
-  "homepage": "."
+  }
 }
